--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "concrete-demo",
+  "name": "structcore-demo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://rimamousavi.github.io/structcore-demo",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "lucide-react": "^0.563.0",
@@ -24,6 +27,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "tailwindcss": "^4.1.18",
     "vite": "npm:rolldown-vite@7.2.5"
